# fourier

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.yaml  NOTICE  RELEASE-NOTES-v0.1.0.md  RELEASE-NOTES-v0.2.0.md  TASKS-shared.yaml  TASKS.yaml  queue-macbook.yaml  queue-thinkpad.yaml
.github/: FUNDING.yml
.github/workflows/: ci-heartbeat.yml  kh-sim-ci.yml
3-fold-path/backlog/: BACKLOG-MOB-E01-mobile-optimization-bodyterapie.md  MI-M-T-D08-TDD-SPEC.md  OPEN-QUESTIONS-LOG.md  PROJECT-PLAN-3fold-path-active-backlog.md
3-fold-path/code/: MI-M-T-PHP-ROUTE-AUDIT.md  SESSION-NOTES.md
3-fold-path/code/mi_m_t/: IMPLEMENTATION-STATUS.md  d06.sqlite  pyproject.toml  smoke_test.py
3-fold-path/code/mi_m_t/mi_m_t/: config.py  db.py  deps.py  main.py
3-fold-path/code/mi_m_t/mi_m_t/domain/: decomposition.py  statuses.py
3-fold-path/code/mi_m_t/mi_m_t/models/: __init__.py  base.py  item_status_history.py  item_status_transition.py  iteration_test_set.py  project.py  request.py  test_case.py  test_run.py  test_target.py  user.py
3-fold-path/code/mi_m_t/mi_m_t/routers/: projects.py  requests.py  state_machine.py  sync.py  test_cases.py  test_runs.py  test_targets.py  trace.py  value_lists.py
3-fold-path/code/mi_m_t/mi_m_t/schemas/: common.py  request_schema.py  test_case.py  test_run.py  test_target.py
3-fold-path/code/mi_m_t/mi_m_t/services/: requests.py  test_cases.py  test_runs.py  test_targets.py  transitions.py
3-fold-path/code/mi_m_t/tests/: conftest.py  test_smk9.py
3-fold-path/evidence/: requirements.yaml  test-targets.yaml  testcases.yaml
3-fold-path/hotfix/: BUG-GAL-D01-gallery-contracted-layout-all-sites.md  HOTFIX-GAL-D01-defect-report.md
3-fold-path/releases/: RELEASE-bodyterapie-v1.1.5.md  RELEASE-bodyterapie-v1.1.6-HOTFIX-GAL-D01.md  RELEASE-mim2000-v1.5.5.md  RELEASE-mim2000-v1.5.6-HOTFIX-GAL-D01.md  RELEASE-zemla-v1.6.2.md  RELEASE-zemla-v1.6.3-HOTFIX-GAL-D01.md
3-fold-path/theme-archives/: ARCHIVES-MANIFEST.md
4-step-noble-steps to MI-M-T/: lege-artis-fourier-bootstrap.md
8gsp/: 8GSP-SESSION-HANDOFF-2026-03-21.md
SUPIN/: FOURIER-FOUNDATIONS-WORKING-SPEC-v0.2-EN.md
_audit/: textbook-citations-allowlist.yaml
_config/: CLAUDE-MD-DELTA-2026-05-09.md  Check-SessionEnv.ps1  DEVICES.md  FALLBACK_PROTOCOL.md  HANDOVER-COMMIT-CHECKLIST-v0.1.md  HANDOVER-V0.2-MACBOOK.md  HANDOVER-V0.2-THINKPAD.md  INFRA_AUDIT.md  KB-LESSONS-LEARNED-OPUS-v0.2.yaml  KB-LESSONS-LEARNED.yaml  LEGE-ARTIS-ORG-MIGRATION-PLAN-v0.1.md  MACBOOK-GITHUB-SETUP.md  OPUS-CYCLE-v0.2-MASTER.md  OPUS-CYCLE-v0.2.1-STAGES-ADDENDUM.md  OPUS-FEEDBACK-LOOP-PROTOCOL-v0.1.md  OPUS-READING-LIST.md  OPUS-SESSION-PREP-MI-M-T-PROD.md  PHYSICS-NUMERICAL-METHODS-v0.1.md  PRIORITY-MATRIX-GOVERNANCE-v0.1.md  RUNBOOK-DEVOPS.md  SESSION-HANDOFF.md  SESSION-START-CHEAT-SHEET-v0.1.md  Start-LocalEnv.ps1  THINKPAD-AS-IS-2026-05-02.md  ci-queue-update.py  gate6-gate7-continue.ps1  github-init.ps1  github-init.sh  github-ssh-setup.md  github_ed25519.pub  laragon-vhosts-setup.ps1  libreoffice-migrate-to-D.ps1  macbook-bootstrap.sh  macbook-git-sync-2026-05-02.sh  merge-tasks.py  migrate-testcases-v1-to-v2.py  sync-main.ps1  sync-main.sh  vscode-extensions-setup.ps1  windows-setup-rollback.txt  (+1 more)
_config/archive/: SESSION-CONTINUITY-2026-03-28.md  SESSION-CONTINUITY-2026-03-29.md
_deliverables/birthday-edition/: COVER-LETTER-DRAFT-v0.1.md
_handoffs/: SHAD-V0.2-VOICE-ADDENDUM-FOR-BRIEFS.md
_handoffs/macbook-shad-tier-first-cut/: MASTER-BRIEF.md
_handoffs/macbook-v0.2.x-weekend/: JOB-1-SHAD-B4-ELECTRONIC.md  JOB-2-FOURIER-V0.2-PASCAL.md  JOB-3-PERF-NOISY-MULTIDIM-SCOPING.md  MASTER-BRIEF.md  OUTPUTS-CHECKLIST.md  STATUS-REPORT-TEMPLATE.md
_handoffs/shad-b1-real-data-rebuild/: SONNET-BRIEF.md  STATUS-FILLED.md
_handoffs/shad-b5-radar/: SONNET-BRIEF.md
_handoffs/shad-b6-radioastronomy/: SONNET-BRIEF.md
_handoffs/shad-b7-nuclear-reactor/: SONNET-BRIEF.md
_handoffs/v0.2.x-testbed-expansion-c1-c4/: SONNET-BRIEF.md
_specs/: PLANNED-SHADDACK-TIER-SCOPE-v0.1.md  SHAD-TIER-AUTHORING-ROADMAP-B4-B7-v0.1.md  SHAD-TIER-B7-CAPSTONE-OPUS-NOTES-v0.1.md  SHAD-VOICE-GUIDE-v0.2.md  SONNET-CLOSE-v0.1.0-RC-2026-05-10.md  SONNET-HANDOFF-v0.2.0-CPP-PORT.md  WORKING-SPEC-v0.3-EN.md
_sync/: MACBOOK-COMMIT-2026-03-22.md  README.md
_templates/: project-tasks-template.yaml
_tests/: test_task_integrity.py
backends/cpp/: Makefile
backends/fortran/: Makefile
databases/MongoDB/: config.yaml
databases/PostgreSQL/: config.yaml
docs/mindmaps/: project-overview.drawio
docs/shad/: 00-prologue.md  01-oscilloscope.md  02-audio.md  03-vibration.md  04-electronic.md  05-jwst-l2.md  05-radar.md  06-radioastronomy.md  README.md  (+3 more)
fourier/: CODE_OF_CONDUCT.md  LICENSE-DOCS  README.md  SECURITY.md  TRADEMARK.md
infra/: LOG-ARCHITECTURE.md  ML-ARCHITECTURE.md  PINN-ARCHITECTURE.md  SYMB-ARCHITECTURE.md
kh-sim/: LICENSE  README.md  kh-sim.config.yaml
kh-sim/backends/cpp/: CMakeLists.txt  Dockerfile  README.md
kh-sim/backends/cpp/src/: main.cpp  models.hpp  physics.cpp  physics.hpp
kh-sim/backends/cpp/tests/: validation_test.cpp
kh-sim/backends/fortran/: CMakeLists.txt  Dockerfile  README.md
kh-sim/backends/fortran/src/: kh_constants.f90  kh_diagnostics.f90  kh_etdrk4.f90  kh_fft.f90  kh_grid.f90  kh_io.f90  kh_main.f90  kh_nonlinear.f90  kh_physics.f90  kh_poisson.f90  kh_reference.f90  kh_shim.cpp  kh_shim.hpp  kh_solver.f90  kh_velocity.f90  main.cpp
kh-sim/backends/fortran/tests/: test_num_001_fft_roundtrip.f90  test_num_002_poisson.f90  test_num_003_etdrk4_linear.f90  test_num_004_convergence.f90  test_num_005_dealias.f90  test_num_006_cfl.f90  test_num_007_energy.f90  test_num_008_reference.f90  validation_test.cpp
kh-sim/backends/rust/: Cargo.toml  Dockerfile  README.md
kh-sim/backends/rust/src/: handlers.rs  lib.rs  main.rs  models.rs
kh-sim/backends/rust/src/physics/: fft2d.rs  mod.rs  solver.rs
kh-sim/backends/rust/tests/: validation_test.rs
platform sources/Rust/hello_test/: Cargo.toml
platform sources/Rust/hello_test/src/: main.rs
tools/: json_to_fortran_data.py
(+197 files in other folders)
