[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mi_m_t"
version = "0.1.0"
description = "MI-M-T — Methodology for Integrated Manual Testing — Python FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",        # SQLite async driver (LDE)
    "asyncmy>=0.2",           # MySQL async driver (prod)
    "asyncpg>=0.29",          # PostgreSQL async driver (prod)
    "uvicorn[standard]>=0.24",
    "httpx>=0.26",            # D03/D04 outbound adapter calls
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "factory-boy>=3.3",
    "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
