[package]
name = "hello_test"
version = "0.1.0"
edition = "2021"
authors = ["petr-yamyang"]
description = "Simple Rust hello world test for CI/CD verification"

[dependencies]

[dev-dependencies]

[[bin]]
name = "hello_test"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
